cli/tests/snapshot/inputs/errors/yaml_error_location.ncl
# capture = 'stderr'
# command = ['eval']
(import "../../imports/map.yaml") | { foo : Number, bar : String }
